# tinkoff-invest-rust

./: Cargo.toml  LICENSE  README.md  build.rs
examples/streaming/: Cargo.toml
examples/streaming/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
src/: lib.rs  tcs.rs
tests/: go.rs
