[package]
name = "tinkoff-invest-api"
version = "0.1.0"
edition = "2021"
description = "gRPC Клиент для Тинькофф Инвестиций (протокол v2)"
license = "MIT"
repository = "https://github.com/ovr/tinkoff-invest-rust"

[dependencies]
prost = "0.9"
prost-types = "0.9.0"
uuid = { version = "0.8", features = ["v4"] }
tonic = { version = "0.6.2", features = ["tls", "compression", "tls-roots"]}

[dev-dependencies]
async-stream = "0.3"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}

[build-dependencies]
tonic-build = "0.6.2"

[patch.crates-io]
# Awaiting release with https://github.com/hyperium/tonic/commit/468e4221f0c496d9ffb4de24d3658b9267e884b1
tonic = { git = "https://github.com/hyperium/tonic", rev = "d6c0fc112b2288a080fd0a727453b24d666e3d79" }
