[package]
name = "tinkoff-invest-api"
version = "0.1.2"
edition = "2021"
description = "gRPC Клиент для Тинькофф Инвестиций (протокол v2)"
license = "MIT"
repository = "https://github.com/ovr/tinkoff-invest-rust"

[dependencies]
prost = "0.11"
prost-types = "0.11"
prost-build = "0.11"
protoc = "2"
uuid = { version = "1", features = ["v4"] }
tonic = { version = "0.8", features = ["tls", "tls-roots", "codegen", "channel"]}

[dev-dependencies]
async-stream = "0.3"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
futures-util = {version = "0.3.21"}

[build-dependencies]
tonic-build = { version = "0.8" }

[patch.crates-io]
# Awaiting release with https://github.com/hyperium/tonic/commit/468e4221f0c496d9ffb4de24d3658b9267e884b1
# tonic = { git = "https://github.com/hyperium/tonic", rev = "d6c0fc112b2288a080fd0a727453b24d666e3d79" }
