[package]
name = "tinkoff-invest-api"
version = "0.2.3"
edition = "2021"
description = "gRPC Клиент для Тинькофф Инвестиций (протокол v2)"
license = "MIT"
repository = "https://github.com/ovr/tinkoff-invest-rust"

[dependencies]
prost = "0.11"
prost-types = "0.11"
uuid = { version = "0.8", features = ["v4"] }
tonic = { version = "0.8.0", features = ["tls", "tls-roots", "gzip"]}

[dev-dependencies]
async-stream = "0.3"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
tokio = {version = "1.20", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
futures-util = {version = "0.3.21"}
